--- a/src/App.css
+++ b/src/App.css
@@ -52,3 +52,24 @@ button {
   background: white;
   text-transform: uppercase;
 }
+
+.ball {
+  z-index: 10;
+  padding: 0 6px;
+  color: #fff;
+  font-size: 10px;
+  line-height: 20px;
+  white-space: nowrap;
+  text-align: center;
+  background: #f5222d;
+  border-radius: 10px;
+  box-shadow: 0 0 0 1px #fff;
+  position: relative;
+  top: 30px;
+  left: 45px;
+}
+
+h1 {
+  text-transform: uppercase;
+  text-align: center;
+}
